# ChangeLog for net-misc/youtube-dl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.383 2014/09/10 13:19:36 jer Exp $

*youtube-dl-2014.09.10 (10 Sep 2014)

  10 Sep 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.09.10.ebuild:
  Version bump.

*youtube-dl-2014.09.06 (06 Sep 2014)

  06 Sep 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.09.04.3.ebuild,
  +youtube-dl-2014.09.06.ebuild:
  Version bump.

*youtube-dl-2014.09.04.3 (04 Sep 2014)

  04 Sep 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.08.28.ebuild,
  -youtube-dl-2014.09.01.2.ebuild, +youtube-dl-2014.09.04.3.ebuild:
  Version bump.

*youtube-dl-2014.09.01.2 (02 Sep 2014)

  02 Sep 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.08.27.1.ebuild,
  +youtube-dl-2014.09.01.2.ebuild:
  Version bump.

*youtube-dl-2014.08.28 (28 Aug 2014)

  28 Aug 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.08.25.3.ebuild,
  +youtube-dl-2014.08.28.ebuild:
  Version bump.

*youtube-dl-2014.08.27.1 (27 Aug 2014)

  27 Aug 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.08.27.1.ebuild:
  Version bump.

*youtube-dl-2014.08.25.3 (26 Aug 2014)

  26 Aug 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.08.23.ebuild,
  -youtube-dl-2014.08.24.5.ebuild, +youtube-dl-2014.08.25.3.ebuild:
  Version bump.

*youtube-dl-2014.08.24.5 (24 Aug 2014)

  24 Aug 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.08.22.3.ebuild,
  +youtube-dl-2014.08.24.5.ebuild:
  Version bump.

*youtube-dl-2014.08.23 (23 Aug 2014)

  23 Aug 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.08.23.ebuild:
  Version bump.

*youtube-dl-2014.08.22.3 (23 Aug 2014)

  23 Aug 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.08.21.3.ebuild,
  -youtube-dl-2014.08.22.2.ebuild, +youtube-dl-2014.08.22.3.ebuild:
  Version bump.

*youtube-dl-2014.08.22.2 (22 Aug 2014)
